Prevent touch flicker on mobile

--- a/src/circuit/Circuit.scss
+++ b/src/circuit/Circuit.scss
@@ -13,6 +13,7 @@
   width: 100%;
   height: 100%;
   transform: scale(1.1, 1.1) perspective(250px) rotateX(2deg) rotateY(3deg) rotateZ(-2deg);
+  pointer-events: none;
 }
 
 .circuit-dot {
